@@ -2,8 +2,9 @@ Revision history for Perl extension Coro.
 
 TODO: should explore PerlIO::coroaio (perl leaks like hell).
 TODO: channel->maxsize(newsize)?
-TODO: http://www.microsoft.com/msj/archive/s2ce.aspx
 TODO: __GCC_HAVE_DWARF2_CFI_ASM
+
+	- improved Coro::State documentation a bit.
 
 6.23 Fri Dec  7 23:36:37 CET 2012
         - use experimental fiber implementation on native windows
